Added possible formatting solution for fanshop

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -1,7 +1,7 @@
 <div *ngIf=!redirecting class="background">
   <mat-card>
     <app-product [productId]="productId"
-                 [preview]="true"></app-product>
+                 [orderFormView]="true" [preview]="false"></app-product>
   </mat-card>
 
   <mat-card>
