--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.css
@@ -6,7 +6,9 @@ mat-grid-tile {
 }
 
 mat-grid-list {
+  border: 5px solid turquoise;
   margin-top: 20px;
+  height: 100%;
   width: 70%;
   margin-bottom: 20px;
 
@@ -89,6 +91,8 @@ mat-button-toggle:hover {
   height: 100%;
   width: 100%;
   border-radius: 10px;
+  background-color: pink;
+  border: 2px solid green
 }
 
 #product:hover {
