--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.css
@@ -127,28 +127,27 @@ mat-form-field textarea {
 #preview {
   display: flex;
   width: 100%;
-  height: 100%;
-  border: solid 2px red;
+  height: 200px;
+  border: solid 2px brown;
   flex-direction: row;
   position: relative
 }
 
 #score {
-  height: 100%;
+  height: 35%;
   width: 10%;
   border: solid 2px blue;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: flex-start;
   align-items: center;
   font-size: 20px;
-  margin-top: 20px;
 }
 
 #content {
   padding: 5px;
   display: flex;
-  height: 100%;
+  height: 30%;
   width: 80%;
   border: solid 2px yellow;
   background-color: rgb(155, 155, 155);
