--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -1,11 +1,3 @@
-<div *ngIf="missingProduct">This product does not exist anymore.</div>
-
-
-
-
-
-
-
 
 <div *ngIf="!preview && !orderFormView" class="background">
   <!-- POST  -->
@@ -176,8 +168,8 @@
 </div>
 <div *ngIf="orderFormView" id="orderFormView">
   <a [routerLink]="['/fan-shop/product', product.productId]"> <span class="link-spanner"></span> </a>
-  <span> {{product.price}} </span>
-  <span style="background-color: grey"> {{product.title}}</span>
+  <span style="border-right: 1px solid black; padding-right: 10px">{{product.title}}</span>
+  <span style="padding-left: 5px"> {{product.price}} CHF</span>
 </div>
 
 
