--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.css
@@ -6,10 +6,13 @@ h1 {
     text-align: center;
 }
 
+.background::-webkit-scrollbar {
+    display:none;
+}
+
 .background {
     position: relative;
-    height: 100vh;
-    width: 100%;
+    height: 91vh;
     display: flex;
     flex-direction: column;
 }
@@ -32,25 +35,102 @@ h1 {
     justify-content: space-evenly;
     align-items: center;
     height: 545px;
-    border: solid 2px red;
     position: relative;
 }
 
 .center {
-    border: solid 2px blue;
-}
-
-.left {
-    border: solid 2px yellow;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    height: 80%;
 }
 
 .right {
-    border: solid 2px green;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+	overflow: clip;
+	height: 80%;
+    width: 40%;
 }
 
-.mat-raised-button {
-    height: 95px;
-    width: 220px;
-    font-size:x-large;
-    opacity: 0.9;
+/* SLIDER */
+
+.right .slider {
+	height: 80%;
+	white-space: nowrap;
+	font-size: 0;
+	transition: 0.8s;
+}
+
+/* SLIDES */
+
+.right .slider > * {
+	font-size: 1rem;
+	display: inline-block;
+	white-space: normal;
+	vertical-align: top;
+	height: 100%;
+	width: 100%;
+	background: none 50% no-repeat;
+	background-size: cover;
+}
+
+/* NAVIGATION */
+
+.right .bullets {
+	position: absolute;
+	z-index: 2;
+	bottom: 0;
+	padding: 10px 0;
+	text-align: center;
+}
+.right .bullets > a {
+	display: inline-block;
+	width:       30px;
+	height:      30px;
+	line-height: 30px;
+	text-decoration: none;
+	text-align: center;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.right .bullets > a:hover {
+	background: rgba(255, 255, 255, 0.7) !important;
+}
+
+/* SLIDER ANIMATION POSITIONS */
+
+#s1:target ~ .slider {transform: translateX(   0%); -webkit-transform: translateX(   0%);}
+#s2:target ~ .slider {transform: translateX(-100%); -webkit-transform: translateX(-100%);}
+#s3:target ~ .slider {transform: translateX(-200%); -webkit-transform: translateX(-200%);}
+#s4:target ~ .slider {transform: translateX(-300%); -webkit-transform: translateX(-300%);}
+#s5:target ~ .slider {transform: translateX(-400%); -webkit-transform: translateX(-400%);}
+#s6:target ~ .slider {transform: translateX(-500%); -webkit-transform: translateX(-500%);}
+
+.right{
+	color: #fff;
+    background: rgba(255, 255, 255, 0.5);	
+	text-align: center;
+    text-justify: auto;
+    width: 30%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+}
+.right .slider h2 {
+	font-weight: 100;
+	letter-spacing: -0.06em;
+	word-spacing: 0.2em;
+	font-size: 2em;
+}
+.right a {
+	border-radius: 40%;
+	margin: 0 3px;
+	color: rgba(0,0,0,0.8);
+	text-decoration: none;
 }
