Fixed order layout

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -7,7 +7,7 @@
   <mat-card-content>
       <mat-card>
         <app-product [productId]="order.productId"
-                     [preview]="true">
+                     [orderFormView]="true">
         </app-product>
       </mat-card>
       <mat-card>
