cleaned up user feedback in post-editor

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -101,7 +101,7 @@
 
         <mat-tab-group dynamicHeight>
           <mat-tab label="Post">
-            <mat-hint *ngIf="showDescriptionError" style="color: red">Please write something or upload a picture.</mat-hint>
+            <mat-error *ngIf="showDescriptionError" style="color: red">Please write something or upload a picture.</mat-error>
             <div id="editor">
             <quill-editor
               [(ngModel)]="post.description"
