--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -5,12 +5,12 @@
   </mat-card-header>
 
   <mat-card-content>
-      <mat-card>
+      <mat-card style="display: inline-block">
         <app-product [productId]="order.productId"
                      [orderFormView]="true">
         </app-product>
       </mat-card>
-      <mat-card>
+      <mat-card style="display: inline-block">
         {{order.orderFirstName}} {{order.orderLastName}} <br>
         {{order.orderStreet}} {{order.orderHouseNr}} <br>
         {{order.orderZipCode}} {{order.orderZipCode}} <br>
