--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -24,8 +24,9 @@
       <button *ngIf="user?.isAdmin" mat-flat-button color="warn" (click)="confirmPayment()"[disabled]="isPaid || isCancelled">SET PAID</button>
     </mat-card-actions>
 
-    <mat-card-footer *ngIf="user?.isAdmin">
-      Ordered by: {{orderUserName}} <span *ngIf="isShipped"> | Shipped by: {{orderAdminName}} </span><br><br>
+    <mat-card-footer *ngIf="user?.isAdmin" style="text-align: center">
+      <p>
+      Ordered by: {{orderUserName}} <span *ngIf="isShipped"> | Shipped by: {{orderAdminName}} </span><br><br></p>
     </mat-card-footer>
 
 </mat-card>
