--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.css
@@ -3,6 +3,7 @@
   background-image: url("../../assets/images/nationalbank.jpg");
   background-size: cover;
   position: absolute;
+  background-attachment: fixed;
   top: 0px;
   right: 0px;
   bottom: 0px;
@@ -17,3 +18,18 @@
   align-items: center;
   height: 545px;
 }
+
+
+.background {
+  background-color: rgb(126, 126, 126);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  /* border: solid 5px red; */
+}
+
+
