--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -35,7 +35,8 @@
         <span style="display: inline-block" style="padding: 8px; border: 1px solid black">{{product.price}} CHF</span>
         <mat-card-actions>
         <button mat-flat-button color="primary" (click) = "checkLoggedIn()" *ngIf="user?.isAdmin" style="display: inline-block">
-          Buy now </button >
+          <span class="iconify" data-icon="mdi:cart" data-width="16" data-height="16"></span> Buy now
+        </button >
         </mat-card-actions></div>
       </div>
     </div>
