--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
@@ -6,9 +6,9 @@
             <h3>Share your <span>{{current}}</span></h3>
             </h1>
             <span>
-                <a routerLink="/postfeed"><button mat-raised-button color="primary" style="height:90px; width: 220px; font-size: large;">Browse Posts</button></a>
-                <a routerLink="/fan-shop"><button mat-raised-button color="primary" style="height:90px; width: 220px; font-size: large;">Shop Fan Articles</button></a>
-                <a routerLink="/register"><button *ngIf="!loggedIn" mat-raised-button color="primary" style="height:90px; width: 220px; font-size: large;">Register</button></a>
+                <a routerLink="/postfeed"><button mat-raised-button color="primary" class="ourButtons" style="height:90px; width: 220px; font-size: large; ">Browse Posts</button></a>
+                <a routerLink="/fan-shop"><button mat-raised-button color="primary" class="ourButtons" style="height:90px; width: 220px; font-size: large;">Shop Fan Articles</button></a>
+                <a routerLink="/register"><button *ngIf="!loggedIn" mat-raised-button color="primary" class="ourButtons" style="height:90px; width: 220px; font-size: large;">Register</button></a>
             </span>
         </div>
 
