--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.html
@@ -2,7 +2,7 @@
   <div id="commentHeader">
     <p> Posted &#183; by {{authorName}} &#183; {{comment.timeSince}} ago
       <span class="example-spacer"></span>
-      <button mat-flat-button color="warn" (click)="confirmDeleteComment()" *ngIf="user?.userId === comment.userId || user?.isAdmin">
+      <button mat-flat-button color="accent" (click)="confirmDeleteComment()" *ngIf="user?.userId === comment.userId || user?.isAdmin">
         Delete Comment
       </button>
     </p>
