--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.css
@@ -4,7 +4,8 @@
 
 /* DROPDOWN FOR PROFILE */
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: #FF9800;
+  border-radius: 10px;
   color: white;
   padding: 16px;
   font-size: 25px;
@@ -13,6 +14,15 @@
   text-align: center;
 
 }
+
+a {
+  color: white;
+}
+
+a:hover {
+  color: rgb(182, 182, 182);
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
@@ -25,6 +35,7 @@
   min-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 2;
+  border-radius: 10px;
 }
 .dropdown-content a {
   color: black;
@@ -33,6 +44,6 @@
   display: block;
   font-size: small;
 }
-.dropdown-content a:hover {background-color: #ddd;}
-.dropdown:hover .dropdown-content {display: block;}
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown-content a:hover {background-color: #ddd; border-radius: 10px;}
+.dropdown:hover .dropdown-content {display: block; border-radius: 10px;}
+.dropdown:hover .dropbtn {background-color: #EF6C00;}
