--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.css
@@ -10,6 +10,10 @@
     display: flex;
 }
 
+button:hover {
+    background-color: #EF6C00;
+}
+
 #commentText {
     /* border: solid 1px blue; */
     font-size: 16px;
