--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
     <a routerLink="/fan-shop">Fan-Shop</a>
     <span class="example-spacer"></span>
 
-    <span *ngIf="!loggedIn"><a routerLink="/login"><button mat-raised-button color="accent">Login</button></a></span>
+    <span *ngIf="!loggedIn"><a routerLink="/login"><button mat-raised-button color="accent" id="loginButton">Login</button></a></span>
     <span *ngIf="loggedIn">
       <div class="dropdown">
         <mat-icon class="dropbtn">account_circle</mat-icon>
