--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.css
@@ -24,7 +24,6 @@
   align-items: center;
   justify-content: flex-start;
   position: relative;
-  /* border: solid 5px red; */
 }
 
 .background::before {
@@ -50,10 +49,8 @@
   flex-direction: column;
   position: relative;
   z-index: 2;
-  /* border: solid 2px blue; */
-  background-color: aliceblue;
+  background-color: #fff7ee;
   border-radius: 10px;
-  /* overflow-y: scroll; */
 }
 
 #productHeader {
@@ -94,7 +91,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: rgb(160, 159, 159);
+  background-color: #fff7ee;
   position: relative;
   text-align: center;
   border-radius: 10px;
@@ -146,7 +143,7 @@ mat-form-field textarea {
   display: flex;
   height: 150%;
   width: 80%;
-  background-color: rgb(155, 155, 155);
+  background-color: #fff7ee;
   flex-direction: column;
 }
 
@@ -191,7 +188,7 @@ mat-form-field textarea {
   position: absolute;
   left: 0;
   top: 0;
-  background: linear-gradient(transparent 100px, rgb(155, 155, 155));
+  background: linear-gradient(transparent 100px, #fff7ee);
 }
 
 #suffix {
@@ -204,7 +201,6 @@ mat-form-field textarea {
 
 #suffix button:hover {
   background-color: transparent;
-  /* position: relative; */
   z-index: 0;
 }
 
@@ -222,10 +218,12 @@ button {
 }
 
 button:hover {
-  background-color: grey;
+  background-color: #EF6C00;
 }
 
 .mat-flat-button {
   height: 35px;
   font-size: 10px;
+  background-color: #FF8F00;
+
 }
