--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.css
@@ -93,6 +93,12 @@ img {
     border-radius: 10px;
 }
 
+.buttons {
+    display: flex;
+    align-items: center;
+    height: 10vh;
+}
+
 h1 {
     margin-top: 10px;
     text-decoration: underline;
