added padding for buttons in product editor

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.css
@@ -191,6 +191,13 @@ mat-form-field textarea {
   background: linear-gradient(transparent 100px, #fff7ee);
 }
 
+.buttons {
+  display: flex;
+  align-items: center;
+  height: 10vh;
+  justify-content: center;
+}
+
 #suffix {
   /* border: solid 1px green; */
   margin-bottom: 10px;
