removed price field bug

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -65,10 +65,10 @@
 
       <mat-form-field appearance="fill" id="price">
         <mat-label>Price CHF</mat-label>
-        <textarea title= "Price" placeholder="Price" rows="{{rows}}" matInput
-                  (ngModelChange)="countRows(); invalidPrice()"
+        <input title= "Price" placeholder="Price" matInput
+                  (ngModelChange)="invalidPrice()"
                   [(ngModel)]="product.price"
-                  [ngModelOptions]="{standalone: true}"></textarea>
+                  [ngModelOptions]="{standalone: true}">
         <mat-hint style="color: red" *ngIf="showPriceError">Please set a price.</mat-hint>
       </mat-form-field>
       <!-- Categories -->
